kubernetes/echo-server-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: echo-server
  labels:
    app: echo-server
  namespace: jenkins-ci
spec:
  replicas: 1
  selector:
    matchLabels:
      app: echo-server
  template:
    metadata:
      name: echo-server
      labels:
        app: echo-server
    spec:
      containers:
      - image: belenot/echo-server:latest
        name: echo-server
        ports:
        - containerPort: 8080
