kubernetes/echo-server-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: echo-server
  namespace: jenkins-ci
spec:
  selector:
    app: echo-server
  type: LoadBalancer
  ports:
  - name: http
    targetPort: 8080
    port: 5000
